# NetSentinel

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  build.rs  dev-elevated.sh  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json
.agents/agents/: backend-general.md  backend-planner.md  frontend-planner.md  netsentinel-general.md
.codex/agents/: developer.toml  netsentinel-general.toml  planner.toml  reviewer.toml
.gemini/agents/: backend-developer.md  backend-reviewer.md  frontend-developer.md  frontend-planner.md
.legacy-tauri-frontend/: tailwind.config.js  tauri.conf.json
.opencode/agents/: backend-developer.md  backend-general.md  backend-planner.md  backend-reviewer.md  developer.md  frontend-developer.md  frontend-general.md  frontend-planner.md  frontend-reviewer.md  netsentinel-general.md  planner.md  reviewer.md
assets/: cve-database.db
docs/images/: README.md  baseline-diff.png.placeholder  dashboard.png.placeholder  findings.png.placeholder  report-html.png.placeholder  report-pdf.png.placeholder  scan-view.png.placeholder  topology.png.placeholder
src/: App.tsx  baseline.rs  error.rs  events.rs  history.rs  history_adapter.rs  index.css  ipc.rs  lib.rs  main.rs  main.tsx  scan_plan.rs  scan_store.rs  settings.rs  types.rs  ui.rs
src-tauri/: Cargo.toml  IMPLEMENTATION_PLAN.md
src-tauri/assets/: cve-database.json
src-tauri/src/: baseline.rs  error.rs  history.rs  lib.rs  settings.rs  types.rs
src-tauri/src/commands/: device.rs  export.rs  history.rs  mod.rs  network.rs  platform.rs  privilege.rs  scan.rs  settings.rs
src-tauri/src/network/: banner.rs  cve.rs  host_discovery.rs  icmp.rs  mod.rs  oui.rs  privileges.rs  sanitize.rs  syn_scan.rs  udp_scan.rs
src-tauri/src/network/discovery/: arp_table.rs  mod.rs  tcp_probe.rs
src-tauri/src/network/platform/: linux.rs  macos.rs  windows.rs
src-tauri/src/state/: scan_state.rs
src/commands/: baseline.rs  device.rs  export.rs  history.rs  mod.rs  network.rs  platform.rs  privilege.rs  scan.rs  scan_store.rs  scheduler.rs  settings.rs  topology.rs
src/hooks/: useKeyboardShortcuts.ts  useNotifications.ts  useTheme.ts
src/network/: active_checks.rs  banner.rs  capture.rs  cidr.rs  cve.rs  host_discovery.rs  icmp.rs  ipv6_discovery.rs  mdns_netbios.rs  mod.rs  oui.rs  privileges.rs  sanitize.rs  sctp_scan.rs  service_detection.rs  syn_scan.rs  tcp_raw_scan.rs  threats.rs  timing.rs  tls.rs  topology.rs  udp_raw_scan.rs  udp_scan.rs  web_audit.rs
src/reporting/: advanced.rs  compliance.rs  export.rs  mod.rs  risk.rs  scoring.rs
src/state/: mod.rs  scan_state.rs  (+1 more)
(+112 files in other folders)
