[workspace]
members = ["tools/nmap_parser"]

[package]
name = "netsentinel"
version = "0.1.0"
description = "A network scanning and audit tool built with Rust + Iced"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.32"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
ipnetwork = "0.20"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
async-trait = "0.1"
pnet_packet = "0.35"
pnet = "0.35"
socket2 = { version = "0.5", features = ["all"] }
once_cell = "1"
libc = "0.2"
tempfile = "3"
rfd = "0.14"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
x509-parser = "0.16"
iced = { version = "0.13", features = ["tokio", "image"] }
tonic = "0.12"
prost = "0.13"
tokio-stream = { version = "0.1", features = ["net"] }
crc32fast = "1.5.0"
lazy_static = "1.5.0"
bincode = "1.3.3"
serde_bytes = "0.11.19"
nmap_parser = { version = "0.1.0", path = "tools/nmap_parser" }

[build-dependencies]
bincode = "1.3.3"
nmap_parser = { version = "0.1.0", path = "tools/nmap_parser" }
protoc-bin-vendored = "3.2.0"
regex = "1"
serde_bytes = "0.11.19"
tonic-build = "0.12"
