[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tracing = "0.1"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-log = "2"
sysinfo = "0.32"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
ipnetwork = "0.20"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
async-trait = "0.1"
pnet_packet = "0.35"
pnet = "0.35"
socket2 = { version = "0.5", features = ["all"] }
once_cell = "1"
libc = "0.2"
tauri-plugin-notification = "2"
tempfile = "3"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
